--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "irc": "irc://irc.freenode.net/phpunit"
     },
     "require": {
-        "php": ">=5.3.3",
-        "phpunit/php-text-template": ">=1.1.1@stable"
+        "php": ">=5.3.3"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*@dev"
